# NFLStatCheck

api/espn-api/: README.md  pyproject.toml
api/espn-api/src/espn_api/: __init__.py  main.py
api/espn-api/src/espn_api/endpoints/: __init__.py  athletes.py  boxscore.py  calendar.py  coaches.py  events.py  franchise.py  futures.py  game.py  game_log.py  game_odds.py  game_officials.py  game_summary.py  h2h.py  leaders.py  linescores.py  matchup.py  news.py  odds.py  odds_records.py  past_performances.py  player_stats.py  plays.py  plays_detailed.py  positions.py  power_index.py  predictor.py  probabilities.py  qbr.py  recap.py  roster.py  schedule.py  scoreboard.py  seasons.py  splits.py  spread.py  standings.py  stats_log.py  talent_picks.py  teams.py  (+3 more)
api/espn-api/tests/: f_test_01.py  f_test_02.py
app/js/: nfl-stats-real-time.ts  nfl-stats-tracker.tsx
docs/: deployment-considerations.txt  github-deployment.txt  netlify-deployment.txt  vercel-deployment.txt
