[project]
name = "espn_api"
version = "0.1.0"
description = "Python package to query ESPN NFL APIs"
authors = [
    {name = "Brendan A. Burgee", email = "brendan.burgee@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
